@startuml

title <size: 30> Use Case: Add Device to Room v5.0

note "<b>Only methods related to 'add device to \n<b>room' use case are represented" as N1

skinparam linetype ortho

class AddDeviceToRoomCTRL{
    - deviceService : DeviceService

    + AddDeviceToRoomCTRL(deviceService : DeviceService)
    + addDeviceToRoom(roomDTO : RoomDTO, deviceDTO : DeviceDTO) : boolean
}

interface RoomRepository{

}

class RoomRepositoryMem {
    - DATA : Map<RoomIDVO, Room>
    + save(room : Room) : boolean
    + findAll() : Iterable<Room>
    + findByID(ID : RoomIDVO) : Room
    + isPresent(roomID : RoomIDVO) : boolean
}


class RoomDTOMapper{
    + createRoomIDVO(roomDTO : RoomDTO) : RoomIDVO
}


class RoomDTO{
    - roomID : String
    - roomName : String
    - floor : int
    - roomWidth : double
    - roomLength : double
    - roomHeight : double

    + RoomDTO(roomName : String, floor : int, roomWidth : double, \nroomLength : double, roomHeight : double)
    + getRoomID() : String
}



class Room {
    - roomID : RoomIDVO
    - roomName : RoomNameVO
    - floor : RoomFloorVO
    - roomDimensions : RoomDimensionsVO
    - houseID : HouseIDVO
}

interface DeviceService {
    + addDevice(deviceName : deviceNameVO, deviceModel : DeviceModelVO, \nroomID : RoomIDVO) : boolean
}

class DeviceServiceImpl {
    - deviceFactory : DeviceFactory
    - deviceRepository : DeviceRepository

    + DeviceServiceImpl(deviceFactory : DeviceFactory, roomRepository : RoomRepository, deviceRepository : DeviceRepository)
}

interface DeviceFactory {
+ createDevice(deviceName : deviceNameVO, deviceModel : DeviceModelVO, \nroomID : RoomIDVO) : Device
}

class DeviceFactoryImpl {

}

class RoomIDVO {
    - identifier : UUID
    + RoomID(identifier : UUID)
}

class DeviceDTOMapper{
    + createDeviceNameVO(deviceDTO : DeviceDTO) : DeviceNameVO
    + createDeviceModelVO(deviceDTO : DeviceDTO) : DeviceModelVO
}

class DeviceDTO{
    - deviceID : String
    - deviceName : String
    - deviceModel : String
    - deviceStatus : String
    - roomID : String

    + DeviceDTO(deviceName : String, deviceModel : String)
    + getDeviceName() : String
    + getDeviceModel() : String
}

class DeviceIDVO {
    - identifier : UUID

    + DeviceIDVO(identifier : UUID)
}

class DeviceNameVO {
    - deviceName : String

    + DeviceNameVO(deviceName : String)
}

class DeviceModelVO {
    - deviceModel : String

    + DeviceModelVO(deviceModel : String)
}

class DeviceStatusVO {
    - deviceStatus : boolean
    + DeviceStatusVO(deviceStatus : boolean)
}


class Device {
    - deviceID : DeviceIDVO
    - deviceName : DeviceNameVO
    - deviceModel : DeviceModelVO
    - deviceStatus : DeviceStatusVO
    - roomID : RoomIDVO

    + Device(deviceName : DeviceNameVO, deviceModel : DeviceModelVO, roomID : RoomIDVO)
}

class DeviceRepositoryMem {
     - DATA : Map<DeviceIDVO, Device>

     + save(device : Device) : boolean
     + findAll() : Iterable<Device>
     + findByID(ID : DeviceIDVO) : Device
     + isPresent(deviceID : DeviceIDVO) : boolean
     - validEntity(device : Device) : boolean
}

interface DeviceRepository {
    + findByRoomID(roomID : RoomIDVO) : List<Device>
}

interface Repository<T> {
    + save(entity : T) : boolean
    + findAll() : Iterable<T>
    + findByID(ID : DomainID) : T
    + isPresent(ID : DomainID) : boolean
}


'interface DomainID {
'    + getID() : String
'}


interface DomainEntity {
    + getID() : DomainID
}


AddDeviceToRoomCTRL ..> RoomDTOMapper
AddDeviceToRoomCTRL ....> DeviceDTOMapper
DeviceDTOMapper .left.> DeviceDTO
AddDeviceToRoomCTRL ..left> DeviceServiceImpl
DeviceService <|.. DeviceServiceImpl
RoomDTOMapper .down.> RoomDTO
/'missing relationship between RoomMapper and RoomID?'/


DeviceServiceImpl ..right> DeviceRepositoryMem
DeviceServiceImpl ..> DeviceFactoryImpl
DeviceFactory <|.right. DeviceFactoryImpl
DeviceDTOMapper ..> DeviceNameVO : <create>
DeviceDTOMapper ..> DeviceModelVO : <create>
DeviceFactoryImpl ..> Device : <create>


Device "*" o-- "1" RoomIDVO
Room "1" *-- "1" RoomIDVO
Device "1" o-up- "1" DeviceNameVO
Device "1" o-left- "1" DeviceModelVO
Device "1" *-- "1" DeviceIDVO
Device "1" *-- "1" DeviceStatusVO

Repository <|-- RoomRepository
RoomRepository <|.. RoomRepositoryMem
Repository <|-- DeviceRepository
DeviceRepository <|.. DeviceRepositoryMem
DeviceRepositoryMem "1" o-- "*" Device
RoomRepositoryMem "1" o--- "*" Room

Room ...|> DomainEntity
Device ...|> DomainEntity
'DomainID <|.. RoomIDVO
'DomainID <|.up. DeviceIDVO


@enduml